--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,11 +15,7 @@
     </div>
 </nav>
 
-<!--<html xmlns:th="http://www.thymeleaf.org">
-<body>
-    <div th:replace="~{fragments/navbar :: navbar}"></div>
-
-</body>
-</html> -->
+<!--
+    <div th:replace="~{fragments/navbar :: navbar}"></div>-->
 </body>
 </html>
