--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -26,5 +26,10 @@
 </div>
 
 <a th:href="@{/logout}">Logout</a>
+
+<div th:replace="~{fragments/navbar :: navbar}"></div>
+
+</body>
+</html>
 </body>
 </html>
